# agentic

./: .gitignore  README.md  pyproject.toml
agents/: audit_logger.py  fraud_scorer.py  generator.py  planner.py  self_evaluator.py
app/: main.py  schemas.py
data/: sample_policies.txt
rag/: ingest.py  vector_store.py
